--- a/composer.json
+++ b/composer.json
@@ -118,6 +118,11 @@
     "extra": {
         "branch-alias": {
             "dev-master": "3.2-dev"
+        },
+        "dev-files": {
+            "doc": ["CHANGELOG*.md", "CONTRIBUTING.md", "CONTRIBUTORS.md", "README*.md", "UPGRADE*.md"],
+            "test": ["Tests", "phpunit.xml.dist"],
+            "other": [".github", ".editorconfig", ".git*", ".php_cs", ".travis*", "appveyor.yml"]
         }
     }
 }
